# SistemaIoTcentralina

./: README.md
iot-bridge/: docker-compose.yml
iot-bridge/config-service/: Dockerfile  config_sender.py  requirements.txt  wait-for-kafka.py
iot-bridge/config-service/parser/: xml_parser.py
iot-bridge/config-service/static/: dashboard.html
iot-bridge/kafka-mqtt-bridge/: Dockerfile  bridge.py
iot-bridge/mosquitto/: mosquitto.conf
iot-bridge/templates/json/: mpx_197.json  mpx_197_complete.json
iot-bridge/templates/xml/: MPXProV4.xml  XR75CX_9_8_NT.xml
stageMosaicoIoT/: .env  CMakeLists.txt  README.md  dashboard.html  partitions.csv  sdkconfig  sdkconfig.defaults
stageMosaicoIoT/main/: CMakeLists.txt  Kconfig.projbuild  master.c
stageMosaicoIoT/spiffs_data/: reset.html
